Добавляет плавность изменения активных элементов

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -12,6 +12,7 @@
   color: $button-color;
   border: none;
   cursor: pointer;
+  transition: background-color $time, color $time;
 
   &:hover,
   &:focus-visible {
