--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -40,6 +40,7 @@ $catalog-separator-color:#cdcdcd;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    flex-basis: 895px;
   }
 }
 
