--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -40,7 +40,7 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 240px;
     grid-template-rows: repeat(3, auto);
-    padding: 77px 63px 59px 52px;
+    padding: 75px 63px 59px 52px;
     gap: 24px 10px;
   }
 
@@ -122,9 +122,24 @@
   }
 }
 
+
 .category__link {
+  $position-x-start: -8px;
+  $position-x-end: 0;
+
+  @keyframes categoryLinkArrow {
+    0% {
+      background-position-x: $position-x-start;
+    }
+
+    100% {
+      background-position-x: $position-x-end;
+    }
+  }
+
+
   grid-column: 1/-1;
-  padding-top: 19px;
+  padding-top: 20px;
   display: flex;
   align-items: center;
   gap: 15px;
@@ -134,22 +149,24 @@
   text-decoration: none;
   color: inherit;
   border-top: 1px solid $separator-color;
-  transition: background-position-x 0.5s;
+  transition: background-position $time, opacity $time;
 
   &::after {
-    @include icon(32px, 12px, "arrow", -8px, center);
+    @include icon(32px, 12px, "arrow", $position-x-start, center);
   }
 
   &:hover::after,
   &:focus-visible::after {
-    background-position-x: 0;
+    background-position-x: $position-x-end;
+    animation: categoryLinkArrow $time;
   }
 
   &:active {
     opacity: 0.3;
 
     &::after {
-      background-position-x: 0;
+      background-position-x: $position-x-end;
+      animation: categoryLinkArrow $time;
     }
   }
 
