--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -74,7 +74,7 @@ $live-example-bg-color-start: #eaeaea;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px 32px;
+  gap: 15px 32px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 100px;
@@ -105,7 +105,7 @@ $live-example-bg-color-start: #eaeaea;
   font-family: $font-secondary;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1em;
+  line-height: 1.2em;
   text-align: center;
   text-transform: lowercase;
   color: $text-secondary-color;
@@ -114,7 +114,7 @@ $live-example-bg-color-start: #eaeaea;
   align-self: center;
 
   @media (min-width: $tablet-width) {
-    margin: -0.5em 0 0;
+    margin: -0.5em 8px 0;
     font-size: 14px;
     background-color: $bg-basic-color;
   }
@@ -125,12 +125,11 @@ $live-example-bg-color-start: #eaeaea;
 }
 
 .live-example__value {
-  padding: 14px;
-  padding-bottom: 17px;
+  padding: 11px 14px 14px;
   margin: 0;
   font-size: 24px;
   font-weight: 400;
-  line-height: 1em;
+  line-height: 1.2em;
   text-align: center;
   text-transform: uppercase;
   color: $text-color;
@@ -138,6 +137,7 @@ $live-example-bg-color-start: #eaeaea;
   border-radius: 5px;
 
   @media (min-width: $tablet-width) {
+    padding: 14px 14px 17px;
     font-size: 30px;
     line-height: 37px;
   }
@@ -158,6 +158,7 @@ $live-example-bg-color-start: #eaeaea;
   @media (min-width: $tablet-width) and (max-width: $tablet-width-max) {
     width: auto;
     flex-direction: column;
+    flex-basis: 290px;
     margin-left: auto;
     font-size: 20px;
     text-align: right;
@@ -165,6 +166,7 @@ $live-example-bg-color-start: #eaeaea;
 
   @media (min-width: $desktop-width) {
     width: 365px;
+    gap: 25px;
     font-size: 20px;
   }
 }
@@ -188,6 +190,6 @@ $live-example-bg-color-start: #eaeaea;
     grid-column: 3 / 4;
     grid-row: 1 / -1;
     justify-self: right;
-    margin-top: 45px;
+    margin-top: 50px;
   }
 }
