--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -19,7 +19,7 @@ $card-separator-color: #cdcdcd;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-rows: 225px 1fr auto;
+    grid-template-rows: 225px auto 1fr auto;
     width: 245px;
     gap: 7px;
   }
@@ -65,6 +65,7 @@ $card-separator-color: #cdcdcd;
 .product-card__link-title {
   width: 90px;
   text-decoration: none;
+  transition: opacity $time;
 
   &:hover,
   &:focus-visible {
