--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -50,3 +50,6 @@ $icon-color-active:rgba(#68b738, 0.6);
 
 $separator-color:#d9d9d9;
 $separator-border: 1px solid $separator-color;
+
+//переменные для плавных переходов
+$time: 0.5s;
