Подгоняет под пиксель перфект. Рефакторит код

--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -13,13 +13,12 @@ $card-separator-color: #cdcdcd;
     width: 324px;
     gap: 16px;
     grid-template-columns: 1fr;
-    grid-template-rows: 228px 1fr auto;
-
+    grid-template-rows: auto 1fr auto;
     background: linear-gradient(to bottom, transparent 81px, $bg-primary-color 81px);
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-rows: 225px auto 1fr auto;
+    grid-template-rows: auto auto 1fr auto;
     width: 245px;
     gap: 7px;
   }
@@ -59,6 +58,16 @@ $card-separator-color: #cdcdcd;
 
   @media (min-width: $tablet-width) {
     grid-row: unset;
+  }
+}
+
+.product-card__image {
+  object-fit: contain;
+  object-position: center;
+  height: 100px;
+
+  @media (min-width: $tablet-width) {
+    height: 225px;
   }
 }
 
@@ -109,6 +118,11 @@ $card-separator-color: #cdcdcd;
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-max) {
     padding-inline: 35px;
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 20px;
   }
 }
 
@@ -125,6 +139,12 @@ $card-separator-color: #cdcdcd;
     font-size: 16px;
     line-height: 18px;
     flex-grow: 1;
+  }
+}
+
+.product-card__desc--more {
+  @media (min-width: $tablet-width) {
+    padding-inline: 35px;
   }
 }
 
