--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -65,6 +65,10 @@
     font-size: 16px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
 }
 
 .product__button {
