--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -1,6 +1,3 @@
-// .category {
-// }
-
 .category__list {
   @include list();
   padding: 20px 0;
@@ -76,7 +73,7 @@
     height: 200px;
     margin-left: 0;
     margin-right: -34px;
-    align-self: center;
+    margin-top: 14px;
   }
 
   @media (min-width: $desktop-width) {
@@ -84,6 +81,7 @@
     height: 100px;
     margin-left: -15px;
     margin-right: 0;
+    margin-top: 0;
   }
 }
 
