--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,6 +1,3 @@
-// .features {
-// }
-
 .features__title {
   margin: 0;
   padding-bottom: 40px;
@@ -43,6 +40,7 @@
   &::before {
     @include icon(60px, 60px);
     flex-shrink: 0;
+    align-self: flex-start;
     background-color: $bg-secondary-color;
     background-size: 26px 30px;
 
