--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -29,7 +29,7 @@ $hero-left-margin-desktop: 80px;
     display: contents;
   }
 
-  &::after {
+  &::before {
     @include index-bg-image("mobile");
     content: "";
     grid-row: 2/4;
@@ -134,6 +134,7 @@ $hero-left-margin-desktop: 80px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
+    padding-bottom: 20px;
   }
 }
 
@@ -141,6 +142,7 @@ $hero-left-margin-desktop: 80px;
   padding-bottom: 3px;
   grid-column: 2/-2;
   grid-row: 3/5;
+  z-index: -1;
 
   @media (min-width: $desktop-width) {
     grid-column: 3/-1;
@@ -154,7 +156,7 @@ $hero-left-margin-desktop: 80px;
   @media (min-width: $tablet-width) {
     grid-row: 3/4;
     place-self: start start;
-    margin-top: 21px;
+    margin-top: 25px;
     margin-left: $hero-left-margin-tablet;
     padding: 14px 26px;
   }
