--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,6 +1,3 @@
-// .page {
-// }
-
 .page__body {
   font-family: $font-primary;
   font-size: 14px;
@@ -9,6 +6,7 @@
   color: $text-color;
   background-color: $bg-basic-color;
   min-height: 100vh;
+  min-width: $content-width-mobile;
   display: flex;
   flex-direction: column;
 }
