--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -1,6 +1,3 @@
-// .category {
-// }
-
 .category__list {
   @include list();
   padding: 20px 0;
@@ -28,7 +25,6 @@
   gap: 22px 0;
   padding: 21px 20px;
   background-color: $bg-primary-color;
-  // align-items: center;
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-max) {
     &::before {
@@ -41,7 +37,7 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 240px;
     grid-template-rows: repeat(3, auto);
-    padding: 77px 63px 59px 52px;
+    padding: 75px 63px 59px 52px;
     gap: 24px 10px;
   }
 
@@ -77,7 +73,7 @@
     height: 200px;
     margin-left: 0;
     margin-right: -34px;
-    align-self: center;
+    margin-top: 14px;
   }
 
   @media (min-width: $desktop-width) {
@@ -85,6 +81,7 @@
     height: 100px;
     margin-left: -15px;
     margin-right: 0;
+    margin-top: 0;
   }
 }
 
@@ -123,9 +120,24 @@
   }
 }
 
+
 .category__link {
+  $position-x-start: -8px;
+  $position-x-end: 0;
+
+  @keyframes categoryLinkArrow {
+    0% {
+      background-position-x: $position-x-start;
+    }
+
+    100% {
+      background-position-x: $position-x-end;
+    }
+  }
+
+
   grid-column: 1/-1;
-  padding-top: 19px;
+  padding-top: 20px;
   display: flex;
   align-items: center;
   gap: 15px;
@@ -135,22 +147,24 @@
   text-decoration: none;
   color: inherit;
   border-top: 1px solid $separator-color;
-  transition: background-position-x 0.5s;
+  transition: background-position $time, opacity $time;
 
   &::after {
-    @include icon(32px, 12px, "arrow", -8px, center);
+    @include icon(32px, 12px, "arrow", $position-x-start, center);
   }
 
   &:hover::after,
   &:focus-visible::after {
-    background-position-x: 0;
+    background-position-x: $position-x-end;
+    animation: categoryLinkArrow $time;
   }
 
   &:active {
     opacity: 0.3;
 
     &::after {
-      background-position-x: 0;
+      background-position-x: $position-x-end;
+      animation: categoryLinkArrow $time;
     }
   }
 
