--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -26,11 +26,13 @@
 .compare-slider__image--before {
   object-position: left;
   justify-self: start;
+  width: 50%;
 }
 
 .compare-slider__image--after {
   object-position: right;
   justify-self: end;
+  width: 50%;
 }
 
 .compare-slider__control-button {
@@ -48,6 +50,8 @@
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
+  transition: background-color $time;
+
 
   &::after {
     @include icon-mask(24px,18px,"slider-control");
@@ -57,6 +61,7 @@
     transform: translate(-50%, -50%);
     background-color: var(--color);
     cursor: pointer;
+    transition: background-color $time;
   }
 
   &::before {
@@ -72,6 +77,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
+    transition: background-color $time, border-color $time;
   }
 
   &:hover,
