--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -4,7 +4,7 @@
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr $content-width-desktop 1fr;
-    grid-template-rows: 100px auto 100px;
+    grid-template-rows: 95px auto 100px;
   }
 }
 
@@ -22,8 +22,8 @@
   padding: 26px 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
   justify-content: space-between;
+  align-items: center;
   background-color: inherit;
   z-index: 2;
 
@@ -86,7 +86,7 @@
   height: 362px;
 
   @media (min-width: $tablet-width) {
-    min-height: 400px;
+    height: 400px;
   }
 
   @media (min-width: $desktop-width) {
@@ -99,4 +99,8 @@
 .contacts__map-image {
   display: block;
   margin-inline: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
