--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -2,24 +2,6 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
 $hero-left-margin-tablet: 90px;
 $hero-left-margin-desktop: 80px;
 
-@mixin index-bg-image($device) {
-  $image: "../../images/hero-background-"+$device;
-  $underground:linear-gradient(to bottom left, #3f3e43, #525157);
-
-  @if ($device=="desktop") {
-    $underground:linear-gradient(#3d3c41, #3d3c41);
-  }
-  background-image:
-    linear-gradient($hero-bg-secondary-color, $hero-bg-secondary-color),
-    image-set(
-      url($image+"@1x.webp") type("image/webp") 1x,
-      url($image+"@2x.webp") type("image/webp") 2x,
-      url($image+"@1x.jpg") type("image/jpeg") 1x,
-      url($image+"@2x.jpg") type("image/jpeg") 2x
-    ),
-    $underground;
-}
-
 .index-header {
   display: grid;
   grid-template-columns: 1fr $content-width-mobile 1fr;
@@ -68,7 +50,6 @@ $hero-left-margin-desktop: 80px;
     $column-middle4: calc($content-width-desktop / 2);
     grid-template-columns: 1fr $column-middle1 $column-middle2 $column-middle3 $column-middle4 1fr;
     grid-template-rows: auto auto 1fr;
-    min-height: 694px;
   }
 }
 
@@ -145,6 +126,7 @@ $hero-left-margin-desktop: 80px;
   z-index: -1;
 
   @media (min-width: $desktop-width) {
+    padding-bottom: 50px;
     grid-column: 3/-1;
     grid-row: 2/-1;
   }
