--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -29,3 +29,4 @@
 @import "./blocks/product.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/container.scss";
+@import "./blocks/program-form.scss";
