--- a/source/styles/blocks/main-container.scss
+++ b/source/styles/blocks/main-container.scss
@@ -3,7 +3,7 @@
 }
 
 .main-container__title {
-  margin: 27px 0 41px;
+  margin: 27px 0 40px;
 
   @media (min-width: $tablet-width) {
     margin: 40px 0 85px;
@@ -11,5 +11,17 @@
 
   @media (min-width: $desktop-width) {
     margin: 45px 0 85px;
+  }
+}
+
+.main-container__desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1.5;
   }
 }
