--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,6 +8,7 @@
 /* BLOCKS */
 @import "./blocks/button.scss";
 @import "./blocks/input.scss";
+@import "./blocks/input-control.scss";
 @import "./blocks/section-title.scss";
 @import "./blocks/section-subtitle.scss";
 @import "./blocks/logo.scss";
@@ -28,5 +29,5 @@
 @import "./blocks/catalog-extra.scss";
 @import "./blocks/product.scss";
 @import "./blocks/subscribe.scss";
-@import "./blocks/container.scss";
 @import "./blocks/program-form.scss";
+@import "./blocks/container.scss";
