--- a/source/styles/blocks/input-control.scss
+++ b/source/styles/blocks/input-control.scss
@@ -7,12 +7,20 @@
   line-height: 1.12;
   text-transform: uppercase;
   color: $text-secondary-color;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1.5;
+  }
 }
 
 .input-control__label {
-  max-width: 50%;
   flex-shrink: 0;
   align-self: center;
+}
+
+.input-control__label--input {
+  max-width: 50%;
 }
 
 .input-control__input {
@@ -26,7 +34,30 @@
   color: $text-color;
   border: 1px solid #e7e7e7;
 
-  &::placeholder {
+  &:placeholder-shown {
+    font-family: inherit;
+    color: $text-secondary-color;
+  }
+}
+
+.input-control__input--email {
+  border-color: #cdcdcd;
+}
+
+.input-control__input--tel {
+  border-color: #cdcdcd;
+}
+
+.input-control--textarea {
+  padding: 14px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  border: 1px solid #e7e7e7;
+
+  &:placeholder-shown {
+    font-family: inherit;
     color: $text-secondary-color;
   }
 }
