--- a/source/styles/blocks/main-container.scss
+++ b/source/styles/blocks/main-container.scss
@@ -1,5 +1,7 @@
 .main-container {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-container__title {
@@ -15,6 +17,8 @@
 }
 
 .main-container__desc {
+  margin-top: 0;
+  margin-bottom: 14px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.3;
