--- a/source/styles/blocks/section-subtitle.scss
+++ b/source/styles/blocks/section-subtitle.scss
@@ -34,7 +34,7 @@
   margin-right: auto;
   font-size: 24px;
   font-weight: 400;
-  line-height: 1em;
+  line-height: 1.2;
 
   background-color: $bg-basic-color;
 
