Добавляет кастомные радио кнопки и чекбоксы

--- a/source/styles/blocks/program-form.scss
+++ b/source/styles/blocks/program-form.scss
@@ -26,12 +26,12 @@
   border: none;
 }
 
-.program-form__group--extra{
-
+.program-form__group--extra {
+  padding: 0;
 }
 
-.program-form__group--contacts{
-
+.program-form__group--contacts {
+  padding: 0;
 }
 
 .program-form-extra__inner-wrapper{
