--- a/source/styles/blocks/input-control.scss
+++ b/source/styles/blocks/input-control.scss
@@ -12,6 +12,63 @@
     font-size: 20px;
     line-height: 1.5;
   }
+
+  &:disabled {
+    opacity: 0.3;
+  }
+}
+
+.input-control--radio {
+  & input[type="radio"] {
+    display: none;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-color: $button-bg-color;
+    border: 1px solid $input-border;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 16px $bg-basic-color;
+    transition: box-shadow $time-fast ease-in-out;
+  }
+
+  &:has(:checked)::before {
+    box-shadow: inset 0 0 0 8px $bg-basic-color;
+  }
+
+  &:hover::before,
+  &:active::before {
+    border-color: #bababa;
+  }
+}
+
+.input-control--checkbox {
+  & input[type="checkbox"] {
+    display: none;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-color: $bg-basic-color;
+    border: 1px solid $input-border;
+    transition: background-image $time-fast ease-in-out;
+  }
+
+  &:has(:checked)::before {
+    @include icon(30px, 30px, "tick");
+    background-size: 24px 19px;
+  }
+
+  &:hover::before,
+  &:active::before {
+    border-color: #bababa;
+  }
 }
 
 .input-control__label {
@@ -37,6 +94,16 @@
   &:placeholder-shown {
     font-family: inherit;
     color: $text-secondary-color;
+  }
+
+  &:focus-within {
+    outline: 2px solid #444444;
+  }
+
+  &[type="number"]::-webkit-inner-spin-button,
+  &[type="number"]::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
   }
 }
 
