--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -38,7 +38,9 @@ $button-secondary-bg-color-active: #ebebeb;
 
 //разное
 $input-color:#444444;
-$input-border: #cdcdcd;
+$input-border-color: #cdcdcd;
+$input-border-color-hover: #bababa;
+$input-border-color-focus: #444444;
 
 $card-title-color:#222222;
 $card-title-secondary-color:#111111;
