--- a/source/styles/blocks/input.scss
+++ b/source/styles/blocks/input.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
   line-height: 30px;
   color: $input-color;
-  border: 1px solid $input-border;
+  border: 1px solid $input-border-color;
   text-transform: uppercase;
 
   &:placeholder-shown {
