ИСправляет ошибки линтера

--- a/source/styles/blocks/program-form.scss
+++ b/source/styles/blocks/program-form.scss
@@ -34,13 +34,13 @@
   padding: 0;
 }
 
-.program-form-extra__inner-wrapper{
+// .program-form-extra__inner-wrapper{
 
-}
+// }
 
-.program-form-contacts__inner-wrapper{
+// .program-form-contacts__inner-wrapper{
 
-}
+// }
 
 .program-form__input-wrapper {
   & ~ & {
@@ -63,11 +63,11 @@
   }
 }
 
-.program-form__label {
-}
+// .program-form__label {
+// }
 
-.program-form__input {
-}
+// .program-form__input {
+// }
 
 .program-form__group--radio {
   padding-block: 19px;
@@ -87,22 +87,22 @@
   padding: 0;
 }
 
-.program-form__input--email {
-}
+// .program-form__input--email {
+// }
 
-.program-form__input--tel {
-}
+// .program-form__input--tel {
+// }
 
-.program-form__group--checkboxes {
-}
+// .program-form__group--checkboxes {
+// }
 
 .program-form__footer {
   display: grid;
   gap: 21px;
 }
 
-.program-form__button {
-}
+// .program-form__button {
+// }
 
 .program-form__textarea {
   min-height: 150px;
