--- a/source/styles/blocks/input-control.scss
+++ b/source/styles/blocks/input-control.scss
@@ -3,12 +3,14 @@ $input-border-focus: 2px solid #444444;
 .input-control {
   display: flex;
   gap: 13px;
+  align-items: center;
   font-family: $font-primary;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
   text-transform: uppercase;
   color: $text-secondary-color;
+  word-break: break-word;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -20,43 +22,159 @@ $input-border-focus: 2px solid #444444;
   }
 }
 
-.input-control--radio {
-  --size: 30px;
+.input-control--tel::after {
+  @include icon-mask(20px, 20px,"phone");
+}
 
-  & input[type="radio"] {
-    @include visually-hidden();
+.input-control--email::after {
+  @include icon-mask(20px, 20px,"email");
+}
+
+.input-control--email,
+.input-control--tel {
+  position: relative;
+
+  &::after {
+    background-color: $text-color;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 13px;
   }
 
-  &::before {
-    content: "";
-    display: block;
-    width: var(--size);
-    height: var(--size);
-    background-color: $button-bg-color;
-    border: 1px solid $input-border-color;
-    border-radius: 50%;
-    box-shadow: inset 0 0 0 calc(var(--size) / 2 + 1px) $bg-basic-color;
-    transition: box-shadow $time-fast ease-in-out;
-
-    @media (min-width: $tablet-width) {
-      --size: 40px;
-    }
-  }
-
-  &:has(:checked)::before {
-    box-shadow: inset 0 0 0 calc(var(--size) / 4) $bg-basic-color;
-  }
-
-  &:hover::before,
-  &:active::before {
-    border-color: #bababa;
-  }
-
-  &:focus-within::before {
-    outline: $input-border-focus;
+  &:has(:focus-visible)::after {
+    background-color: $icon-color-hover;
   }
 }
 
+
+.input-control__label {
+}
+
+.input-control__label--input {
+  max-width: 50%;
+}
+
+.input-control__input {
+  flex-grow: 1;
+  align-self: flex-start;
+  padding: 13px;
+  min-width: 100px;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.12;
+  text-transform: uppercase;
+  color: $text-color;
+  border: 1px solid #e7e7e7;
+  transition: border-color $time;
+
+  &:placeholder-shown {
+    font-family: inherit;
+    color: $text-secondary-color;
+  }
+
+  &:hover,
+  &:active {
+    border-color: $input-border-color-hover;
+  }
+
+  &:focus-within {
+    outline: $input-border-focus;
+  }
+
+  &[type="number"]::-webkit-inner-spin-button,
+  &[type="number"]::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+}
+
+.input-control__input--email {
+  border-color: $input-border-color;
+  padding-right: 45px;
+}
+
+.input-control__input--tel {
+  border-color: $input-border-color;
+  padding-right: 45px;
+}
+
+.input-control__radio {
+  --size: 30px;
+
+  appearance: none;
+  flex-shrink: 0;
+  align-self: flex-start;
+  margin: 0;
+  display: block;
+  width: var(--size);
+  height: var(--size);
+  background-color: $button-bg-color;
+  border: 1px solid $input-border-color;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0 calc(var(--size) / 2 + 1px) $bg-basic-color;
+  transition: box-shadow $time-fast ease-in-out;
+
+  &:checked {
+    box-shadow: inset 0 0 0 calc(var(--size) / 4) $bg-basic-color;
+  }
+
+  &:hover,
+  &:active {
+    border-color: #bababa;
+  }
+
+  &:focus-within {
+    outline: $input-border-focus;
+  }
+
+  @media (min-width: $tablet-width) {
+    --size: 40px;
+  }
+}
+
+.input-control__checkbox {
+  --size: 30px;
+  appearance: none;
+  flex-shrink: 0;
+  align-self: flex-start;
+  margin: 0;
+  display: block;
+  width: var(--size);
+  height: var(--size);
+  background-color: $bg-basic-color;
+  border: 1px solid $input-border-color;
+  transition: background-image $time-fast ease-in-out;
+
+  &:checked {
+    @include icon-bg-image("tick");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 18px 14px;
+
+    @media (min-width: $tablet-width) {
+      background-size: 24px 19px;
+    }
+  }
+
+  &:hover,
+  &:active {
+    border-color: #bababa;
+  }
+
+  &:focus-within {
+    outline: $input-border-focus;
+  }
+
+  @media (min-width: $tablet-width) {
+    --size: 40px;
+  }
+}
+
+
+/*
 .input-control--checkbox {
   --size: 30px;
 
@@ -97,83 +215,44 @@ $input-border-focus: 2px solid #444444;
   &:focus-within::before {
     outline: $input-border-focus;
   }
-}
+} */
 
-.input-control--tel::after {
-  @include icon-mask(20px, 20px,"phone");
-}
 
-.input-control--email::after {
-  @include icon-mask(20px, 20px,"email");
-}
+/*
+.input-control--radio {
+  --size: 30px;
 
-.input-control--email,
-.input-control--tel {
-  position: relative;
-
-  &::after {
-    background-color: $text-color;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: 13px;
+  & input[type="radio"] {
+    @include visually-hidden();
   }
 
-  &:has(:focus-visible)::after {
-    background-color: $icon-color-hover;
-  }
-}
+  &::before {
+    content: "";
+    display: block;
+    width: var(--size);
+    height: var(--size);
+    background-color: $button-bg-color;
+    border: 1px solid $input-border-color;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 calc(var(--size) / 2 + 1px) $bg-basic-color;
+    transition: box-shadow $time-fast ease-in-out;
 
-
-.input-control__label {
-  flex-shrink: 0;
-  align-self: center;
-}
-
-.input-control__label--input {
-  max-width: 50%;
-}
-
-.input-control__input {
-  padding: 13px;
-  flex-basis: 100%;
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.12;
-  text-transform: uppercase;
-  color: $text-color;
-  border: 1px solid #e7e7e7;
-  transition: border-color $time;
-
-  &:placeholder-shown {
-    font-family: inherit;
-    color: $text-secondary-color;
+    @media (min-width: $tablet-width) {
+      --size: 40px;
+    }
   }
 
-  &:hover,
-  &:active {
-    border-color: $input-border-color-hover;
+  &:has(:checked)::before {
+    box-shadow: inset 0 0 0 calc(var(--size) / 4) $bg-basic-color;
   }
 
-  &:focus-within {
+  &:hover::before,
+  &:active::before {
+    border-color: #bababa;
+  }
+
+  &:focus-within::before {
     outline: $input-border-focus;
   }
-
-  &[type="number"]::-webkit-inner-spin-button,
-  &[type="number"]::-webkit-outer-spin-button {
-    appearance: none;
-    margin: 0;
-  }
 }
-
-.input-control__input--email {
-  border-color: $input-border-color;
-  padding-right: 45px;
-}
-
-.input-control__input--tel {
-  border-color: $input-border-color;
-  padding-right: 45px;
-}
+  */
