--- a/source/styles/blocks/section-subtitle.scss
+++ b/source/styles/blocks/section-subtitle.scss
@@ -3,6 +3,9 @@
   grid-template-columns: 1fr $content-width-mobile 1fr;
   grid-template-rows: auto;
   align-items: center;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.2;
 
   &::after {
     content: "";
@@ -19,10 +22,12 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr $content-width-tablet 1fr;
+    font-size: 32px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr $content-width-desktop 1fr;
+    font-size: 40px;
   }
 }
 
@@ -32,19 +37,17 @@
   padding-right: 40px;
   margin: 0;
   margin-right: auto;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 1.2;
+  font-size: 1em;
+  font-weight: inherit;
+  line-height: inherit;
 
   background-color: $bg-basic-color;
 
   @media (min-width: $tablet-width) {
-    font-size: 32px;
     padding-left: 40px;
   }
 
   @media (min-width: $desktop-width) {
-    font-size: 40px;
     margin-left: -40px;
   }
 }
